email and opt send successfull

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PORT = 3000
 DB_PASSWORD = fFefRlNehXx2M73U
 DB_USERNAME = fullstackecommerce
 BASE_URL= /api/v1
+AUTH_EMAIL = alammuntasir01@gmail.com
+AUTH_PASSWORD = kuvp lcxm tial rbfv
