--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/alammuntasir/citmern2405_backend#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^13.0.0",
     "express": "^5.1.0",
     "mongoose": "^8.18.2",
+    "nodemailer": "^7.0.9",
     "nodemon": "^3.1.10"
   }
 }
