JWT applied and token are use

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ DB_USERNAME = fullstackecommerce
 BASE_URL= /api/v1
 AUTH_EMAIL = alammuntasir01@gmail.com
 AUTH_PASSWORD = kuvp lcxm tial rbfv
+PRIVATE_KEY= mern2405
