banner created and delted done

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ BASE_URL= /api/v1
 AUTH_EMAIL = alammuntasir01@gmail.com
 AUTH_PASSWORD = kuvp lcxm tial rbfv
 PRIVATE_KEY= mern2405
+SERVER_URL = http://localhost:3000/
