--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ AUTH_EMAIL = alammuntasir01@gmail.com
 AUTH_PASSWORD = kuvp lcxm tial rbfv
 PRIVATE_KEY= mern2405
 SERVER_URL = http://localhost:3000
+SSL_STORE = munta69314ac002c99
+SSL_PASSWORD = munta69314ac002c99@ssl
+IS_LIVE = false
