--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.9",
     "nodemon": "^3.1.10",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "sslcommerz-lts": "^1.2.0"
   }
 }
